--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@mdi/font": "5.9.55",
     "@ravengitgraph/js": "^1.3.9",
+    "raw-loader": "^4.0.2",
     "roboto-fontface": "*",
     "vue": "^3.2.16",
     "vuetify": "^3.0.0-alpha.0",
