--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,8 @@
 	"dependencies": {
 		"@mdi/font": "5.9.55",
 		"@ravengitgraph/js": "^1.3.9",
+		"cypress": "^9.1.1",
+		"cypress-plugin-snapshots": "^1.4.4",
 		"raw-loader": "^4.0.2",
 		"roboto-fontface": "*",
 		"vue": "^3.2.16",
